--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
     "react-native-vector-icons": "^9.2.0"
